[metadata]
name = python-raindropio
version = attr: raindropio.__version__

url = https://github.com/atsuoishimoto/python-raindropio
author = Atsuo Ishimoto
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License

project_urls =
    Source = https://github.com/atsuoishimoto/python-raindropio


[options]
python_requires = >=3.7
packages = find:

setup_requires =
    wheel
    setuptools-git

install_requires =
    requests-oauthlib
    python-dateutil
    jashin>=0.0.6
    python-dotenv

[options.extras_require]
dev =
    wheel
    twine
    pytest
    mypy
    black
    flake8
    autoflake
    pre-commit
